feat: Added Footer section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.asparksys.com/medias/1670323246868.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.asparksys.com/medias/1670344084376.png">
     <link rel="manifest" href="/site.webmanifest">
 
 </head>
@@ -166,9 +166,9 @@
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body text-info">
-                              <p>
-                                Yes, you can book hall for parties, meetings or any type of events.
-                              </p>
+                                <p>
+                                    Yes, you can book hall for parties, meetings or any type of events.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body text-info">
-                               The entry fee for gate costs 50 Rs
+                                The entry fee for gate costs 50 Rs
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                             data-bs-parent="#accordionExample">
                             <div class="accordion-body text-info">
-                               The price for the room varies between 3500 to 4500.
+                                The price for the room varies between 3500 to 4500.
                             </div>
                         </div>
                     </div>
@@ -232,6 +232,96 @@
             </p>
         </div>
     </section>
+
+    <footer>
+        <hr />
+        <div class="container mt-5">
+            <div class="row fw-bold">
+                <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left">
+                    <img src="https://cdn.asparksys.com/medias/1670344084376.png" alt="logo" width="50" height="50"
+                        class="d-inline-block my-auto mb-3" />
+                    <p class="text-info fw-bold">
+                        Gokarna is located in the heart of Sundar Haraincha and is best place
+                        for enjoyment.
+                    </p>
+                    <div class="d-flex justify-content-start">
+                        <a class="me-2" href=""><img src="https://cdn.asparksys.com/medias/1666170907576.png"
+                                alt="" /></a>
+                        <a class="me-2" href=""><img src="https://cdn.asparksys.com/medias/1666170955862.png"
+                                alt="" /></a>
+                        <a class="me-2" href=""><img src="https://cdn.asparksys.com/medias/1666171007314.png"
+                                alt="" /></a>
+                        <a class="me-2" href=""><img src="https://cdn.asparksys.com/medias/1666171052578.png"
+                                alt="" /></a>
+                        <a class="me-2" href=""><img src="https://cdn.asparksys.com/medias/1666171063385.png"
+                                alt="" /></a>
+                    </div>
+                </div>
+
+                <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
+                    <p><strong class="text-primary h5 fw-bolder"> More Info</strong></p>
+                    <div class="text-info">
+                        <p><a href="#">Book Now</a></p>
+                        <p><a href="./contact.html">Contact Us</a></p>
+                        <p><a href="#">Gallery</a></p>
+                    </div>
+                </div>
+
+                <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
+                    <p><strong class="text-primary h5 fw-bolder"> Quick Links</strong></p>
+                    <div class="text-info">
+                        <p><a href="">Testimonials</a></p>
+                        <p><a href="#team">Our Team</a></p>
+                        <p><a href="#">About Us</a></p>
+                        <p><a href="#faq">FAQ</a></p>
+
+                    </div>
+                </div>
+
+                <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
+                    <p><strong class="text-primary h5 fw-bolder"> Contact us</strong></p>
+                    <div class="text-info">
+                        <p class="d-flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-envelope me-3" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+                            </svg>
+                            gokarnaresort01@gmail.com
+                        </p>
+                        <p class="d-flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-telephone me-3" viewBox="0 0 16 16">
+                                <path
+                                    d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                            </svg>
+                            <span> +977-9852060366</span>
+                        </p>
+                        <p class="d-flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-geo-alt me-3" viewBox="0 0 16 16">
+                                <path
+                                    d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                                <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                            </svg>
+                            <span>Bhaliya, Sundar Haraincha Nepal</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <hr class="mt-4" />
+            <div class="d-flex justify-content-sm-between flex-sm-row flex-column align-items-center text-info">
+                <p>Ⓒ Gokarna 2022. All rights reserved.</p>
+                <p>
+                    Developed by
+                    <a href="https://shekharstha.com.np/" target="_blank"
+                        class="text-primary text-decoration-none">Shekhar & Team</a>
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- End of Footer Section -->
+
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
