fix: added icons in footers

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,10 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+            <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.asparksys.com/medias/1670344084376.png">
+    <link rel="manifest" href="/site.webmanifest">
+
 </head>
 
 <body>
@@ -194,7 +198,7 @@
         <div class="container mt-5">
             <div class="row fw-bold">
                 <div class="col-lg pe-lg-5 me-lg-5 col-12 mb-lg-0 mb-5 text-lg-left">
-                    <img src="https://cdn.asparksys.com/medias/1670323246868.png" alt="logo" width="50" height="50"
+                    <img src="https://cdn.asparksys.com/medias/1670344084376.png" alt="logo" width="50" height="50"
                         class="d-inline-block my-auto mb-3" />
                     <p class="text-info fw-bold">
                         Gokarna is located in the heart of Sundar Haraincha and is best place
