gallery page added

--- a/gallery.html
+++ b/gallery.html
@@ -24,6 +24,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.asparksys.com/medias/1670344084376.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- lightbox -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.css"
+        integrity="sha512-Woz+DqWYJ51bpVk5Fv0yES/edIMXjj3Ynda+KWTIkGoynAMHrqTcDUQltbipuiaD5ymEo9520lyoVOo9jCQOCA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"
+        integrity="sha512-ZKX+BvQihRJPA8CROKBhDNvoc2aDMOdAlcm7TUQY+35XYtrd3yh95QOOhsPDQY9QnKE0Wqag9y38OIgEvb88cA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
@@ -63,7 +72,7 @@
                             <a class="nav-link text-dark fw-600 fs-16" href="#">Rooms</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link text-dark fw-600 fs-16" href="#">Testimonials</a>
+                            <a class="nav-link text-dark fw-600 fs-16" href="./gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item me-4 pt-1">
                             <a class="nav-link text-dark fw-600 text-white fs-14 btn btn-warning btn-small py-1">Contact
@@ -75,122 +84,42 @@
         </nav>
     </section>
 
-    <section class="contact-section pb-5">
-        <div class="container pt-3">
-            <div class="contact-section__img">
-                <img src="https://cdn.asparksys.com/medias/1664275204043.png" alt="About-section-img"
-                    class="img-fluid" />
-                <div class="contact-section__overlay"></div>
-                <h3 class="contact-section__title">Contact Us</h3>
-            </div>
+    <!-- Gallery -->
+    <section class="gallery container">
+        <h1 class="header">Gallery</h2>
+        <div class="flex">
+            <a href="https://cdn.asparksys.com/medias/1670566253219.jpg" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566253219.jpg" alt="" class="frame">
+            </a>
 
-            <h1 class="contact-section__primary-title">Let’s stay connected</h1>
-            <div class="contact-section__wrapper">
-                <!-- Contact Details -->
-                <div class="contact-section">
-                    <div class="row contact-section__row">
-                        <div class="col-lg-7 col-md-12 col-sm-12">
-                            <div class="row">
-                                <div class="col-lg-4 col-sm-4 contact-section__contact-details">
-                                    <div class="details">
-                                        <span class="details__icons"><img
-                                                src="https://cdn.asparksys.com/medias/1666259171836.svg" /></span>
-                                        <span class="details__text">Address</span>
-                                        <span class="details__address">Sundar haraincha - 4 </span>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-sm-4 contact-section__contact-details">
-                                    <div class="details">
-                                        <span class="details__icons"><img
-                                                src="https://cdn.asparksys.com/medias/1666259197935.svg" /></span>
-                                        <span class="details__text">Phone</span>
-                                        <span class="details__address"><a href="tel:9852059336">9852059336</a>,
-                                            <a href="tel:9852060366">9852060366</a></span>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-sm-4 contact-section__contact-details">
-                                    <div class="details">
-                                        <span class="details__icons"><img
-                                                src="https://cdn.asparksys.com/medias/1666259213353.svg" /></span>
-                                        <span class="details__text">Email</span>
-                                        <span class="details__address"><a
-                                                href="mailto:gokarnaresort01@gmail.com">gokarnaresort01@gmail.com</a></span>
-                                    </div>
-                                </div>
-                            </div>
+            <a href="https://cdn.asparksys.com/medias/1670566442985.jpg" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566442985.jpg" alt="" class="frame">
+            </a>
 
-                            <div class="row">
-                                <div class="map">
-                                    <iframe
-                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3565.899050930613!2d87.28683121817303!3d26.65171443195431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ef6c3d37f835d3%3A0x19eac9fae6b98b6a!2sGokarna%20Restaurant%20and%20Fun%20Park!5e0!3m2!1sen!2snp!4v1670321415712!5m2!1sen!2snp"
-                                        style="border: 0" allowfullscreen="" loading="lazy"
-                                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                                </div>
-                            </div>
-                        </div>
+            <a href="https://cdn.asparksys.com/medias/1670566522045.JPG" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566522045.JPG" alt="" class="frame">
+            </a>
 
-                        <!-- CONTACT FORM STARTS HERE -->
-                        <div class="col-lg-5 col-md-12 col-sm-12">
-                            <div class="contact-section__form">
-                                <form action="#" class="form-group">
-                                    <h1 class="contact-form-right__form-title">Contact Us</h1>
-                                    <!-- Lead add 1st row  -->
-                                    <div class="contact-form-right__row">
-                                        <!-- Full Name  -->
-                                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                            <label for="data" class="contact-form-right__title">
-                                                Full Name<span class="red-star">*</span>
-                                            </label>
-                                            <div class="">
-                                                <input type="text" name="full-name" placeholder="Enter full name"
-                                                    class="form-control" required />
-                                            </div>
-                                        </div>
-                                    </div>
+            <a href="https://cdn.asparksys.com/medias/1670566535604.JPG" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566535604.JPG" alt="" class="frame">
+            </a>
 
-                                    <!-- Lead add 3rd row  -->
-                                    <div class="contact-form-right__row">
-                                        <!-- Email  -->
-                                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                            <label for="data" class="contact-form-right__title">
-                                                Email<span class="red-star">*</span>
-                                            </label>
-                                            <div class="">
-                                                <input type="email" name="email" placeholder="Enter your email address"
-                                                    class="form-control" required />
-                                            </div>
-                                        </div>
-                                    </div>
+            <a href="https://cdn.asparksys.com/medias/1670566569727.JPG" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566569727.JPG" alt="" class="frame">
+            </a>
+            <a href="https://cdn.asparksys.com/medias/1670566589038.JPG" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566589038.JPG" alt="" class="frame">
+            </a>
+            <a href="https://cdn.asparksys.com/medias/1670566602013.JPG" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566602013.JPG" alt="" class="frame">
+            </a>
+            <a href="https://cdn.asparksys.com/medias/1670566617419.JPG" data-lightbox="gallery" data-title="img">
+                <img src="https://cdn.asparksys.com/medias/1670566617419.JPG" alt="" class="frame">
+            </a>
 
-                                    <!-- Lead add 3rd row  -->
-                                    <div class="contact-form-right__row">
-                                        <!-- Email  -->
-                                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                            <label for="data" class="contact-form-right__title">
-                                                Message<span class="red-star">*</span>
-                                            </label>
-                                            <div class="">
-                                                <textarea class="form-control" placeholder="Type your message..."
-                                                    id="exampleFormControlTextarea1" rows="5"></textarea>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <!-- Lead add 6th row  -->
-                                    <div class="contact-form-right__btns">
-                                        <button type="submit" class="btn contact-form-btn w-100 mt-5">
-                                            Send Message
-                                        </button>
-                                    </div>
-                                </form>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
+
 
 
     <footer>
@@ -283,6 +212,14 @@
     <!-- End of Footer Section -->
 
     <!-- Scripts -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"
+        integrity="sha512-k2GFCTbp9rQU412BStrcD/rlwv1PYec9SNrkbQlo6RZCf75l6KcC3UwDY8H5n5hl4v77IDtIPwOk9Dqjs/mMBQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.js"
+        integrity="sha512-0rYcJjaqTGk43zviBim8AEjb8cjUKxwxCqo28py38JFKKBd35yPfNWmwoBLTYORC9j/COqldDc9/d1B7dhRYmg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
@@ -296,6 +233,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
+
+
 
 </body>
 
