--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <a class="nav-link text-white fw-500 fs-16" href="#">Rooms</a>
                             </li>
                             <li class="nav-item me-4">
-                                <a class="nav-link text-white fw-500 fs-16" href="#">Testimonials</a>
+                                <a class="nav-link text-white fw-500 fs-16" href="./gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item me-4 pt-1">
                                 <a class="nav-link text-white fw-500 text-white fs-14 btn btn-warning btn-small py-1"
