index page changes

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <section class="nav-container bg-white shadow mb-4">
         <nav class="navbar navbar-expand-lg navbar-white py-3 container">
             <div class="container-fluid">
-                <a class="navbar-brand fw-bolder fs-20 text-dark" href="#"><span class="text-warning fs-22 "
+                <a class="navbar-brand fw-bolder fs-20 text-dark" href="./index.html"><span class="text-warning fs-22 "
                         style="padding-right: 2px;">G</span>okarna</a>
 
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
@@ -51,22 +51,18 @@
                                 About Us
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="./index.html#about">About Us</a></li>
                                 <li><a class="dropdown-item" href="./index.html#team">Our Team</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
                         <li class="nav-item me-4">
                             <a class="nav-link text-dark fw-600 fs-16" href="#">Rooms</a>
                         </li>
                         <li class="nav-item me-4">
-                            <a class="nav-link text-dark fw-600 fs-16" href="#">Testimonials</a>
+                            <a class="nav-link text-dark fw-600 fs-16" href="./gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item me-4 pt-1">
-                            <a class="nav-link text-dark fw-600 text-white fs-14 btn btn-warning btn-small py-1">Contact
+                            <a class="nav-link text-dark fw-600 text-white fs-14 btn btn-warning btn-small py-1" href="./contact.html">Contact
                                 Us</a>
                         </li>
                     </ul>
@@ -223,17 +219,17 @@
                     <div class="text-info">
                         <p><a href="#">Book Now</a></p>
                         <p><a href="./contact.html">Contact Us</a></p>
-                        <p><a href="#">Gallery</a></p>
+                        <p><a href="./gallery.html">Gallery</a></p>
                     </div>
                 </div>
 
                 <div class="col-lg col-md-4 col-12 mb-lg-0 mb-4 footer-col text-left">
                     <p><strong class="text-primary h5 fw-bolder"> Quick Links</strong></p>
                     <div class="text-info">
-                        <p><a href="">Testimonials</a></p>
-                        <p><a href="#team">Our Team</a></p>
-                        <p><a href="#">About Us</a></p>
-                        <p><a href="#faq">FAQ</a></p>
+                    
+                        <p><a href="./index.html">Our Team</a></p>
+                        <p><a href="./index.html#team">About Us</a></p>
+                        <p><a href="./index.html#faq">FAQ</a></p>
 
                     </div>
                 </div>
